--- a/example/home.html
+++ b/example/home.html
@@ -56,30 +56,30 @@
     </style>
 </head>
 <body>
-<div id="dashboard" class="container-fluid">
+<div id="dashboard" class="row">
     <div class="row-fluid">
-        <div id="gauge-home-indoor-humidity" class="span4">
+        <div id="gauge-home-indoor-temp" class="span6">
         </div>
-        <div id="gauge-home-indoor-temp" class="span4">
-        </div>
-        <div id="gauge3" class="span4">
+        <div id="gauge-home-indoor-humidity" class="span6">
         </div>
     </div>
     <div class="row-fluid">
-        <div id="home-outdoor-temp" class="span4">
+        <div id="home-indoor-temp" class="span6">
         </div>
-        <div id="home-indoor-temp" class="span4">
+        <div id="home-indoor-humidity" class="span6">
         </div>
-        <div id="home-indoor-humidity" class="span4">
+    </div>
+    <div class="row-fluid">
+        <div id="home-outdoor-temp" class="span6">
+        </div>
+        <div id="home-outdoor-humidity" class="span6">
         </div>
     </div>
 
     <div class="row-fluid">
-        <div id="eliq-6min-avgpower" class="span4">
+        <div id="eliq-6min-avgpower" class="span6">
         </div>
-        <div id="g2-2" class="span4">
-        </div>
-        <div id="g2-3" class="span4">
+        <div id="eliq-hour-avgpower" class="span6">
         </div>
     </div>
 </div>
