--- a/example/home.html
+++ b/example/home.html
@@ -4,31 +4,11 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="/build/index.css" type="text/css" media="screen" charset="utf-8">
     <style type="text/css">
-
-
-        h2 {
-            color: #fff;
-        }
-
-        #graphite {
-            stroke-width: 2px;
-        }
-
-        /*
-         * graphene high-contrast theme customizations
-         */
-        svg.tsview {
-            background: none;
-        }
-
-        .ggview .gauge circle.outer {
-            stroke: none;
-            fill: none;
-        }
-
-        .ggview .gauge circle.inner {
-            stroke: none;
-            fill: none;
+        .glview {
+            text-align: center;
+            font-size: 0.7em;
+            padding-top: 10px;
+            padding-bottom: 20px;
         }
 
         body {
