Add rymdkupa red and white

--- a/example/home.html
+++ b/example/home.html
@@ -50,15 +50,21 @@
         </div>
     </div>
     <div class="row-fluid">
-        <div id="home-outdoor-temp" class="span6">
+        <div id="home-white-temp" class="span6">
         </div>
-        <div id="home-outdoor-humidity" class="span6">
+        <div id="home-red-temp" class="span6">
         </div>
     </div>
     <div class="row-fluid">
         <div id="home-uv-uv" class="span6">
         </div>
         <div id="eliq-hour-avgpower" class="span6">
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div id="home-outdoor-temp" class="span6">
+        </div>
+        <div id="home-outdoor-humidity" class="span6">
         </div>
     </div>
 </div>
