--- a/example/home.html
+++ b/example/home.html
@@ -61,6 +61,12 @@
         <div id="eliq-hour-avgpower" class="span6">
         </div>
     </div>
+    <div class="row-fluid">
+        <div id="home-pikachu-temp" class="span6">
+        </div>
+        <div id="home-bubblan-temp" class="span6">
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript" src="/vendor/js/jquery-1.7.1.min.js"></script>
